# Rynox-Engine

./: .gitmodules  CMakeLists.txt  README.md
Dependecies/Own/RynoxCommon/: CMakeLists.txt
Dependecies/Own/RynoxCommon/include/Common/: Assert.h  LogLevel.h  Logger.h  Macros.h  SparseSet.h
Dependecies/Own/RynoxCommon/src/: Logger.cpp  SparseSet.cpp
Dependecies/Own/RynoxECS/: CMakeLists.txt
Dependecies/Own/RynoxECS/include/ECS/: Entity.h  World.h
Dependecies/Own/RynoxECS/src/: World.cpp
Dependecies/Own/RynoxMath/: CMakeLists.txt
Dependecies/Own/RynoxMath/include/Math/: Vec.h
Dependecies/Own/RynoxMath/include/Math/Detail/: Concepts.h
Dependecies/Own/RynoxMath/include/Math/Mat/: Mat3.h  Mat4.h
Dependecies/Own/RynoxMath/include/Math/Vec/: Vec2.h  Vec3.h
Dependecies/Own/RynoxRenderer/: CMakeLists.txt
Dependecies/Own/RynoxRenderer/RynoxRenderer-OpenGL/: CMakeLists.txt
Dependecies/Own/RynoxRenderer/RynoxRenderer-OpenGL/include/Renderer/OpenGL/: OpenGLRenderer.h  ResourceService.h
Dependecies/Own/RynoxRenderer/RynoxRenderer-OpenGL/include/Renderer/Platform/: Win32GLContext.h
Dependecies/Own/RynoxRenderer/RynoxRenderer-OpenGL/src/OpenGL/: OpenGLRenderer.cpp
Dependecies/Own/RynoxRenderer/RynoxRenderer-OpenGL/src/Platform/: Win32GLContext.cpp
Dependecies/Own/RynoxRenderer/include/Renderer/: BufferElement.h  BufferLayout.h  Handles.h  IRenderer.h  RenderTags.h  RenderTypes.h  ShaderDataType.h  VertexBuffer.h
Dependecies/Own/RynoxRenderer/include/Renderer/Graphics/: CameraData.h  FrameContext.h  MeshData.h  RenderCommand.h  RenderItem.h  ShaderDataType.h  VertexElement.h  VertexLayout.h
Dependecies/Own/RynoxRenderer/include/Renderer/OpenGL/: IGraphicsContext.h  OpenGLDevice.h  OpenGLMesh.h  OpenGLRenderer.h  OpenGLResource.h  ResourceService.h
Dependecies/Own/RynoxRenderer/src/: OpenGLRenderer.cpp  VertexBuffer.cpp
Dependecies/Own/RynoxRenderer/src/OpenGL/: OpenGLRenderer.cpp  ResourceService.cpp
Dependencies/Own/RynoxCommon/include/Common/: Platform.h  Ref.h  SparseContainer.h  SparseSet.h  UUID.h
Dependencies/Own/RynoxCommon/src/: UUID.cpp
Dependencies/Own/RynoxECS/: CMakeLists.txt
Dependencies/Own/RynoxECS/include/ECS/: ComponentStorage.h  Entity.h  EntityPool.h  TypeID.h  World.h
Dependencies/Own/RynoxMath/: CMakeLists.txt
Dependencies/Own/RynoxMath/include/Math/: Mat.h
Dependencies/Own/RynoxMath/include/Math/Mat/: Mat2.h
Dependencies/Own/RynoxMath/include/Math/Vec/: Vec4.h
Dependencies/Own/RynoxRenderer/RynoxRenderer-OpenGL/include/Renderer/OpenGL/: OpenGLDevice.h  OpenGLMesh.h  OpenGLRenderer.h  OpenGLResource.h  OpenGLResourceService.h  OpenGLResourceSlot.h  OpenGLResources.h
Dependencies/Own/RynoxRenderer/RynoxRenderer-OpenGL/src/OpenGL/: OpenGLDevice.cpp  OpenGLRenderer.cpp
Dependencies/Own/RynoxRenderer/RynoxRenderer-OpenGL/src/Platform/: Win32GLContext.cpp
RynoxCore/: CMakeLists.txt
RynoxCore/include/Core/: Application.h  Handles.h  ILayer.h  IWindow.h  LayerStack.h  Win32Window.h
RynoxCore/include/Core/Events/: IEvent.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
RynoxCore/include/Core/Graphics/: GraphicsData.h  MeshData.h  RenderItem.h  RenderTags.h  RenderTypes.h  VertexElement.h  VertexLayout.h
RynoxCore/include/Core/IO/: DynamicLibrary.h
RynoxCore/include/Core/Interfaces/: IModule.h  IRenderer.h
RynoxCore/include/Core/Modules/: OpenGLModule.h
RynoxCore/include/Core/Services/: AssetService.h  IService.h  ModuleService.h
RynoxCore/include/Core/Systems/: ISystem.h
RynoxCore/src/: Application.cpp  DynamicLibrary.cpp  IWindow.cpp  LayerStack.cpp  ModuleService.cpp  OpenGLModule.cpp  Win32Window.cpp
RynoxEditor/: CMakeLists.txt
RynoxEditor/src/: main.cpp
