cmake_minimum_required(VERSION 3.30 FATAL_ERROR)

project(Rynox-Engine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

set(DEPENDENCIES_OWN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Own)
set(DEPENDENCIES_THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Third_Party)

if(MSVC)
  add_compile_options(/MP)
endif()

# Dependecies Third_Party
add_subdirectory(${DEPENDENCIES_THIRD_PARTY_DIR}/glad EXCLUDE_FROM_ALL)

set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(ASSIMP_OPT_BUILD_PACKAGES OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "" FORCE)

set(ASSIMP_BUILD_FBX_IMPORTER ON CACHE BOOL "" FORCE)   # FBX
set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "" FORCE)   # OBJ
set(ASSIMP_BUILD_GLTF_IMPORTER ON CACHE BOOL "" FORCE)  # glTF

add_subdirectory(${DEPENDENCIES_THIRD_PARTY_DIR}/assimp EXCLUDE_FROM_ALL)

# Dependencies Own
add_subdirectory(${DEPENDENCIES_OWN_DIR}/RynoxCommon)
add_subdirectory(${DEPENDENCIES_OWN_DIR}/RynoxMath)
add_subdirectory(${DEPENDENCIES_OWN_DIR}/RynoxRenderer)
add_subdirectory(${DEPENDENCIES_OWN_DIR}/RynoxECS)

# Root
add_subdirectory(RynoxCore)
add_subdirectory(RynoxEditor)