cmake_minimum_required(VERSION 3.30 FATAL_ERROR)

project(RynoxCore LANGUAGES CXX)

file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*
)

file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/*
)

add_library(${PROJECT_NAME}
    STATIC
        ${SOURCE_FILES}
        ${HEADER_FILES}
)

source_group(
    TREE ${CMAKE_CURRENT_SOURCE_DIR}
    FILES
        ${SOURCE_FILES}
        ${HEADER_FILES}
)

target_include_directories(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        RynoxCommon
        RynoxMath
)

target_compile_definitions(${PROJECT_NAME}
    PRIVATE
        RYNOX_OPENGL_MODULE_FILENAME="$<TARGET_FILE_NAME:RynoxRenderer-OpenGL>"
)

set_target_properties(${PROJECT_NAME}
PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${PROJECT_NAME}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${PROJECT_NAME}"

    OUTPUT_NAME "${PROJECT_NAME}-v${PROJECT_VERSION}-$<CONFIG>-$<PLATFORM_ID>"
)